--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -35,7 +35,6 @@ window#waybar.hidden {
 	background: #222330;
 }
 
-
 #workspaces button {
 	transition: none;
 	color: #FAE3B0;
@@ -46,7 +45,7 @@ window#waybar.hidden {
 
 #workspaces button.persistent {
 	transition: none;
-	color: #9951CD;
+	color: #FF9CEE;
 	background: transparent;
 	margin-right: 10px;
 	font-size: 14px;
@@ -54,7 +53,7 @@ window#waybar.hidden {
 
 #workspaces button.empty {
 	transition: none;
-	color: #B5E8E0;
+	color: #A0E7E5;
 	background: transparent;
 	margin-right: 10px;
 	font-size: 14px;
@@ -62,7 +61,7 @@ window#waybar.hidden {
 
 #workspaces button.active {
 	transition: none;
-	color: #0BF7F0;
+	color: #FFE800;
 	background: transparent;
 	margin-right: 10px;
 	font-size: 14px;
@@ -219,9 +218,9 @@ window#waybar.hidden {
 }
 
 #custom-terminal {
-	font-size: 25px;
-	margin-left: 8px;
-	padding-left: 8px;
+	font-size: 23px;
+	margin-left: 5px;
+	padding-left: 5px;
 	padding-right: 8px;
 	border-radius: 15px;
 	transition: none;
@@ -239,4 +238,14 @@ window#waybar.hidden {
    	font-size: 15px;
 	color: #F1F1F1;
 	background: #222330;
+}
+
+#custom-notes {
+	font-size: 25px;
+	margin-left: 6px;
+	padding-left: 6px;
+	padding-right: 8px;
+	border-radius: 15px;
+	transition: none;
+    	color: #e1e288;
 }
